# advent-of-code

./: .gitignore  Makefile  README.md  get_input.sh  pyproject.toml  requirements.txt
2015/: README.md  package-lock.json  package.json
2015/src/: day01.ts  day02.ts  day03.ts  day04.ts  day05.ts  day06.ts  day07.ts  index.ts
2015/tests/: day06.txt
2017/: .gitignore  Makefile  README.md
2017/src/: 201701.c  201702.c  advent.h  main.c
2017/src/ds/: vector.c  vector.h
2017/tests/: test_vector.c
2019/: .gitignore  Justfile  README.md  build.zig  build.zig.zon  template.rs
2019/src/: day01.zig  grid.rs  intcode.rs  lib.rs  main.rs  main.zig
2019/src/grid/: grid.rs  mod.rs  point.rs
2019/src/solutions/: day01.rs  day02.rs  day03.rs  mod.rs  template.rs
2020/: Justfile  README.md  Template.hs  advent.cabal
2020/solutions/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs
2020/solutions/Advent/: Graph.hs  Grid.hs  Parser.hs  Utils.hs
2021/: day01.py  day02.py  day04.py  day07.py  day09.py  day12.py  day14.py  day15.py  day16.py  day17.py  day19.py  day20.py  shared.py
2022/: day01.py  day02.py  day06.py  shared.py
2023/: day01.py  day02.py  day03.py  day06.py  day08.py  day11.py  day12.py  day14.py  day15.py
2024/: .gitignore  Justfile  README.md  Template.hs  advent.cabal
2024/solutions/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs
2024/solutions/Advent/: Graph.hs  Parser.hs  Utils.hs
aoc/: __init__.py  __main__.py
aoc/solutions/: __init__.py  day01.py  day02.py  day03.py  day04.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day21.py  day22.py  day23.py  shared.py  temp.py  template.py
aoc/solutions/_2015/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py
aoc/solutions/_2019/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py
aoc/solutions/_2021/: day03.py  day05.py  day06.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day15.py  day18.py  day19.py  day21.py  day22.py
aoc/solutions/_2022/: day03.py  day05.py  day09.py  day10.py  day11.py  day14.py  day22.py  shared.py
aoc/solutions/_2023/: day01.py  day02.py  day03.py  day04.py  day05.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day16.py
aoc/utils/: downloader.py  functions.py  intcode.py  interfaces.py  tree.py
input/: day01.txt  day08.txt
tests/: day05.txt  test_201507.py  test_201906.py  test_202301.py  test_intcode.py
vnev/: pyvenv.cfg
