[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aoc"
description = "Advent of Code"
classifiers = ["Private :: Do Not Upload"]
requires-python = ">=3.11"
dynamic = ["version", "readme"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}
version = {attr = "aoc.__version__"}

[project.optional-dependencies]
dev = [
    "black",
    "pytest",
    "ruff",
]
