[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aoc"
description = "Advent of Code"
classifiers = ["Private :: Do Not Upload"]
requires-python = ">=3.11"
dynamic = ["version", "readme"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}
version = {attr = "aoc.__version__"}

[project.optional-dependencies]
dev = [
    "black",
    "pytest",
    "ruff",
]

[tool.ruff]
select = [
    "F",
    "E",
    "W",
    "I001",
]
ignore = [
    "E741",
    "E731",
]
src = ["src", "tests"]
target-version = "py311"

[tool.ruff.isort]
known-first-party = ["aoc"]

[tool.ruff.mccabe]
max-complexity = 10
