[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aoc"
description = "Advent of Code"
classifiers = ["Private :: Do Not Upload"]
requires-python = ">=3.12"
dynamic = ["version", "readme"]

[tool.hatch.version]
path = "aoc/__init__.py"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I001",
]
ignore = [
    "E741",
    "E731",
]
isort.known-first-party = ["aoc"]

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "pylsp-mypy>=0.6.9",
    "pytest>=8.3.3",
    "python-lsp-ruff>=2.2.2",
    "python-lsp-server>=1.12.0",
    "ruff>=0.7.4",
]
